--- a/README.ipynb
+++ b/README.ipynb
@@ -14,9 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### function bd_simulator simulates a list of realizations from certain distribution. The code below simulates 10000 realizations of $X_{10}$ with $X_0\\sim \\lambda(3)$ where $\\lambda$ is the Poisson distribution"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -49,7 +47,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### From above, we see that it is definitely a bit slow. But for now let us use it as a baseline"
+    "From above, we see that it is definitely a bit slow. But for now let us use it as a baseline"
    ],
    "metadata": {
     "collapsed": false,
