--- a/README.ipynb
+++ b/README.ipynb
@@ -14,7 +14,9 @@
   },
   {
    "cell_type": "markdown",
-   "source": [],
+   "source": [
+    "function bd_simulator simulates a list of realizations from certain distribution. The code below simulates 10000 realizations of $X_{10}$ with $X_0 \\sim \\lambda(3)$ where $\\lambda$ is the Poisson distribution"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -30,7 +32,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.3 s ± 29 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "5.46 s ± 36.6 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -59,7 +61,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Use the same notation as in the draft. According to Theorem 3.1 we have\n",
+    "Use the same notation as in the draft. According to Theorem 3.1 we have\n",
     "$$\\mathbb E_x[F(X_t)] = \\mathbb E_{\\lambda_x}[\\mathbb F(\\mathbb X_t)]$$\n",
     "For RHS, we could use the bd_simulator to get the MC estimate. What remains to do is to compute the LHS with convenient choice of $F$ (thus $\\mathbb F$) and compare."
    ],
