--- a/README.ipynb
+++ b/README.ipynb
@@ -15,7 +15,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "function bd_simulator simulates a list of realizations from certain distribution. The code below simulates 10000 realizations of $X_{10}$ with $X_0 \\sim \\lambda(3)$ where $\\lambda$ is the Poisson distribution"
+    "function bd_simulator simulates a list of realizations from certain distribution. The code below simulates 10000 realizations of a birth-death process at time 10 with initial values sampled from Poisson distribution"
    ],
    "metadata": {
     "collapsed": false,
