--- a/README.ipynb
+++ b/README.ipynb
@@ -9,20 +9,11 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from BD_simulator import bd_simulator"
+    "# !pip install --user --upgrade mpmath\n",
+    "# !pip install gwr_inversion\n",
+    "# !pip install birdepy\n",
+    "import birdepy as bd"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "function bd_simulator simulates a list of realizations from certain distribution. The code below simulates 10000 realizations of a birth-death process at time 10 with initial values sampled from Poisson distribution"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
   },
   {
    "cell_type": "code",
@@ -32,12 +23,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.46 s ± 36.6 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "16.9 s ± 40.1 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    " %timeit res = bd_simulator(10, np.random.poisson(3, int(1e4)))"
+    "# param: parameter that feeds into custom rate fn, we do not need it so set it as empty list\n",
+    "# model: we use custom rate for flexibility, for now it is only linear rate with migration (affine rate)\n",
+    "# z0: initial values, any callable works (e.g. a Poisson generator)\n",
+    "# obs_times: a list of discrete observation time\n",
+    "# k: number of params\n",
+    "obs_times = [10]\n",
+    "# initial distribution is Poisson\n",
+    "z0 = lambda :np.random.poisson(3)\n",
+    "%timeit pop_sizes = bd.simulate.discrete([1, 1, 1], model='linear-migration', z0=z0, times=obs_times, seed=2021, k = 10**4)\n",
+    "#pop_sizes = bd.simulate.discrete([1, 1, 1], model='linear-migration', z0=z0, times=obs_times, seed=2021, k = 10**5)"
    ],
    "metadata": {
     "collapsed": false,
@@ -47,28 +47,26 @@
    }
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "From above, we see that it is definitely a bit slow. But for now let us use it as a baseline"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27.6 ms ± 120 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
     }
-   }
-  },
-  {
-   "cell_type": "markdown",
+   ],
    "source": [
-    "Use the same notation as in the draft. According to Theorem 3.1 we have\n",
-    "$$\\mathbb E_x[F(X_t)] = \\mathbb E_{\\lambda_x}[\\mathbb F(\\mathbb X_t)]$$\n",
-    "For RHS, we could use the bd_simulator to get the MC estimate. What remains to do is to compute the LHS with convenient choice of $F$ (thus $\\mathbb F$) and compare."
+    "from BD_simulator import bd_simulator\n",
+    "x0 = lambda :np.random.poisson(3)\n",
+    "%timeit res = bd_simulator(10, x0=3, k=10**4)"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%% md\n"
+     "name": "#%%\n"
     }
    }
   }
