--- a/README.ipynb
+++ b/README.ipynb
@@ -12,32 +12,28 @@
     "# !pip install --user --upgrade mpmath\n",
     "# !pip install gwr_inversion\n",
     "# !pip install birdepy\n",
-    "import birdepy as bd"
+    "import birdepy as bd\n",
+    "from BD_simulator import bd_simulator\n",
+    "from test import test_bessel_bd"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "16.9 s ± 40.1 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# param: parameter that feeds into custom rate fn, we do not need it so set it as empty list\n",
-    "# model: we use custom rate for flexibility, for now it is only linear rate with migration (affine rate)\n",
-    "# z0: initial values, any callable works (e.g. a Poisson generator)\n",
-    "# obs_times: a list of discrete observation time\n",
-    "# k: number of params\n",
-    "obs_times = [10]\n",
-    "# initial distribution is Poisson\n",
-    "z0 = lambda :np.random.poisson(3)\n",
-    "%timeit pop_sizes = bd.simulate.discrete([1, 1, 1], model='linear-migration', z0=z0, times=obs_times, seed=2021, k = 10**4)\n",
-    "#pop_sizes = bd.simulate.discrete([1, 1, 1], model='linear-migration', z0=z0, times=obs_times, seed=2021, k = 10**5)"
+    "x0 = 3\n",
+    "T = 4\n",
+    "num_paths = 10 ** 6\n",
+    "def poisson_x0():\n",
+    "    return np.random.poisson(x0)\n",
+    "\n",
+    "from scipy.special import jv as J\n",
+    "from scipy.special import  eval_laguerre as L\n",
+    "\n",
+    "last_states = bd_simulator(T, x0=poisson_x0, num_paths=num_paths, num_threads=1)\n",
+    "j_actual = np.exp(-T) * J(0, 2*np.sqrt(x0))\n",
+    "j_estimate = np.mean(L(last_states, 1))"
    ],
    "metadata": {
     "collapsed": false,
@@ -54,14 +50,85 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "27.6 ms ± 120 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "error is:  6.28811808711157e-05\n"
      ]
     }
    ],
    "source": [
-    "from BD_simulator import bd_simulator\n",
+    "print(\"error is: \",np.abs(j_actual - j_estimate))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(-0.006867008424565817, -0.006285231142691125)"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# or simply call test_bd_bessel\n",
+    "test_bessel_bd(num_paths, T, x0)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16.5 s ± 820 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "obs_times = [10]\n",
+    "# initial distribution is Poisson\n",
+    "z0 = lambda :np.random.poisson(3)\n",
+    "%timeit pop_sizes = bd.simulate.discrete([1, 1, 1], model='linear-migration', z0=z0, times=obs_times, seed=2021, k = 10**4)\n",
+    "#pop_sizes = bd.simulate.discrete([1, 1, 1], model='linear-migration', z0=z0, times=obs_times, seed=2021, k = 10**5)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28.1 ms ± 215 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
     "x0 = lambda :np.random.poisson(3)\n",
-    "%timeit res = bd_simulator(10, x0=3, k=10**4)"
+    "%timeit res = bd_simulator(10, x0=3, num_paths=10**4)"
    ],
    "metadata": {
     "collapsed": false,
