--- a/README.ipynb
+++ b/README.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -19,7 +17,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "x0 = 3\n",
@@ -34,45 +37,45 @@
     "last_states = bd_simulator(T, x0=poisson_x0, num_paths=num_paths, num_threads=1)\n",
     "j_actual = np.exp(-T) * J(0, 2*np.sqrt(x0))\n",
     "j_estimate = np.mean(L(last_states, 1))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "error is:  6.28811808711157e-05\n"
+      "error is:  0.0009527368672980025\n"
      ]
     }
    ],
    "source": [
     "print(\"error is: \",np.abs(j_actual - j_estimate))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "(-0.006867008424565817, -0.006285231142691125)"
+      "text/plain": [
+       "(-0.006867008424565817, -0.006712700515804687)"
+      ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,43 +83,33 @@
    "source": [
     "# or simply call test_bd_bessel\n",
     "test_bessel_bd(num_paths, T, x0)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "16.5 s ± 820 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
-     ]
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "obs_times = [10]\n",
     "# initial distribution is Poisson\n",
     "z0 = lambda :np.random.poisson(3)\n",
     "%timeit pop_sizes = bd.simulate.discrete([1, 1, 1], model='linear-migration', z0=z0, times=obs_times, seed=2021, k = 10**4)\n",
     "#pop_sizes = bd.simulate.discrete([1, 1, 1], model='linear-migration', z0=z0, times=obs_times, seed=2021, k = 10**5)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -129,34 +122,28 @@
    "source": [
     "x0 = lambda :np.random.poisson(3)\n",
     "%timeit res = bd_simulator(10, x0=3, num_paths=10**4)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
