--- a/README.ipynb
+++ b/README.ipynb
@@ -136,6 +136,35 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Discrete Laguerre\n",
+    "Suppose $(X_t)_{t\\ge 0}$ is the squared Bessel process. Define $Z_u = e^{-u}X_{e^u-1}$. We have\n",
+    "$$X_t = (1+t)Z_{\\log (1+u)}$$\n",
+    "Now to estimate $\\mathbb E[F(X_t)]$ for some $F$, it is advantageous to work with $\\mathbb E[F((1+t)Z_{\\log(1+u)})] = \\mathbb E[G(Z_{\\log(1+u)})]$ where $G$ is defined by\n",
+    "$$G(x) = F((1+t)x)$$\n",
+    "This means that we need to use $\\mathbb G$ rather than $\\mathbb F$. For $F=J_0$, is there a closed-form exampression for $\\mathbb F$ for a given $t$?"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
