--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -7,20 +7,21 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'bd_sim_cython'",
+     "ename": "ImportError",
+     "evalue": "cannot import name 'discrete_bessel_sim' from 'bd_sim_cython' (/Users/tt/Dropbox/ORIE 7590/ORIE7590/bd_sim_cython.cpython-310-darwin.so)",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mBD_simulator\u001b[39;00m\u001b[38;5;241m,\u001b[39m \u001b[38;5;21;01mBirthDeathBessel\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# J: Bessel function\u001b[39;00m\n",
-      "File \u001b[0;32m~/Dropbox/ORIE 7590/ORIE7590/BD_simulator.py:3\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# ORIE 7590\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mbd_sim_cython\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m bd_sim\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mbd_simulator\u001b[39m(t, x0, num_paths, num_threads\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m4\u001b[39m):\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;124;03m    :param t: terminal time, double\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;124;03m    :param x0: initial state, callable or int\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;124;03m    :return: ndarray of simulated result at terminal time\u001b[39;00m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'bd_sim_cython'"
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# import BD_simulator, BirthDeathBessel\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mBD_simulator\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m MC_BESQ_gateway, MC_BESQviaLaguerre_gateway, exact_BESQ\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# J: Bessel function\u001b[39;00m\n",
+      "File \u001b[0;32m~/Dropbox/ORIE 7590/ORIE7590/BD_simulator.py:3\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# ORIE 7590\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mbd_sim_cython\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m discrete_bessel_sim, discrete_laguerre_sim\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mspecial\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m jv, laguerre, poch\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mintegrate\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m quad\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'discrete_bessel_sim' from 'bd_sim_cython' (/Users/tt/Dropbox/ORIE 7590/ORIE7590/bd_sim_cython.cpython-310-darwin.so)"
      ]
     }
    ],
    "source": [
-    "import BD_simulator, BirthDeathBessel\n",
+    "# import BD_simulator, BirthDeathBessel\n",
+    "from BD_simulator import MC_BESQ_gateway, MC_BESQviaLaguerre_gateway, exact_BESQ\n",
     "import numpy as np\n",
     "# J: Bessel function\n",
     "from scipy.special import jv as J\n",
